# MathLearner-GDG-Hackathon-2025

./: .gitignore  README.md  app.py  application_module.py  archived_main.py  checkpoint.json  dataset.py  embedding.py  env.example  error_log.txt  final_solution.py  gen_data.py  learning_module.py  mac_notes.txt  main.py  notes.txt  precalculus.json  pyproject.toml  raw_train.json  requirements.txt  result_1.json  solution_1.py  temp_solution.py  test.py  test.txt  training_examples.json  utils.py
attachments/: application_module.drawio  final_finetune_pipeline.drawio  learning_module.drawio
chroma_db/6f19e1ac-e0a9-4ac3-a9c3-13fb09a1c272/: index_metadata.pickle
data/: training_examples.json
llm/: __init__.py  anthropic_llm.py  base_llm.py  llm_factory.py  openai_llm.py  openrouter_llm.py
prompt/: extract_features.txt  fix_code.txt  generate_modified_solution.txt  generate_solution_with_reference.txt  generate_solution_without_reference.txt
